<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Préférences" >

    <PreferenceCategory
        android:key="first_category"
        android:title="@string/categoryserver" >
        <EditTextPreference
            android:defaultValue="94.125.160.65"
            android:dialogIcon="@drawable/icon"
            android:dialogMessage="@string/ipsummary"
            android:dialogTitle="@string/iptitle"
            android:key="server"
            android:summary="@string/ipsummary"
            android:title="@string/iptitle" />
        <EditTextPreference
            android:defaultValue="/index.php"
            android:dialogIcon="@drawable/icon"
            android:dialogMessage="@string/fileaccesssummary"
            android:dialogTitle="@string/fileaccesstitle"
            android:key="fileaccess"
            android:summary="@string/fileaccesssummary"
            android:title="@string/fileaccesstitle" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="protocol"
            android:summary="@string/protocolsummary"
            android:title="@string/protocoltitle" />

        <EditTextPreference
            android:defaultValue="80"
            android:dialogIcon="@drawable/icon"
            android:dialogMessage="@string/portsummary"
            android:dialogTitle="@string/porttitle"
            android:key="port"
            android:summary="@string/portsummary"
            android:title="@string/porttitle" />
    </PreferenceCategory>

    <PreferenceScreen
        android:key="_nothing_"
        android:summary="@string/pref_default"
        android:title="@string/pref_default_summary" >
    </PreferenceScreen>

</PreferenceScreen>