<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="wrap_content" android:focusable="true"
	android:focusableInTouchMode="true">

	<Button android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/addfile"
		android:id="@+filelist/add" android:paddingLeft="25dp"
		android:paddingRight="25dp" />

	<Button android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/addlatex"
		android:id="@+filelist/create" android:paddingLeft="25dp"
		android:paddingRight="25dp" />
	<TextView android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:text="@string/addbugexplain" />

</LinearLayout>